--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -20,9 +20,9 @@
     <div class="flex items-center gap-8 font-medium md:mx-auto md:justify-center">
       <.link
         navigate={~p"/accounts/new"}
-        class="border-2 rounded-lg border-zinc-600 p-2 px-4 hover:underline"
+        class="border-2 rounded-lg border-zinc-600 p-3 px-4 hover:underline"
       >
-        Get started
+        Sell your event tickets
       </.link>
       <.link :if={FunWithFlags.enabled?(:why_choose_button)} class="hover:underline">
         Why choose <span class="font-black italic text-zinc-700">GiTS</span>?
