--- a/lib/gits_web/controllers/user_html/tickets.html.heex
+++ b/lib/gits_web/controllers/user_html/tickets.html.heex
@@ -1,103 +1,64 @@
-<div class="min-h-dvh sticky top-0 z-10 mx-auto max-w-screen-sm bg-zinc-50">
-  <div class="flex items-center justify-between bg-white p-4">
-    <.link navigate={~p"/"} replace={true} class="flex rounded-lg hover:bg-zinc-100 p-2">
-      <.icon name="hero-arrow-left-mini" />
-    </.link>
-    <h1 class="font-semibold">Tickets</h1>
-    <.link class="flex rounded-lg hover:bg-zinc-100 p-2">
-      <!-- <.icon name="hero-ellipsis-horizontal-mini" /> -->
-    </.link>
+<div class="min-h-[calc(100dvh-theme(space.28))] space-y-4 p-2 pt-6 lg:px-0">
+  <h1 class="text-xl font-medium">My Tickets</h1>
+  <div class="flex border-b">
+    <span :for={i <- ["Past tickets", "Coming up", "Shared"]} class="px-4">
+      <span class="block border-b-2 border-b-transparent py-4 text-sm text-zinc-400 hover:border-zinc-500 hover:text-zinc-700">
+        <%= i %>
+      </span>
+    </span>
   </div>
-  <div class="grid grid-cols-2 gap-2 bg-white p-2 text-center shadow-sm *:rounded-xl *:p-3 first:*:bg-zinc-50">
-    <span class="text-sm">Upcoming</span>
-    <span class="text-sm">Past tickets</span>
-  </div>
-  <swiper-container
-    class="mt-2 pt-8"
-    effect="coverflow"
-    grab-cursor="true"
-    centered-slides="true"
-    slides-per-view="auto"
-    coverflow-effect-rotate="45"
-    coverflow-effect-stretch="0"
-    coverflow-effect-depth="100"
-    coverflow-effect-shadows="true"
-  >
-    <swiper-slide :for={ticket <- @tickets} class="grid w-72 gap-0.5 overflow-hidden rounded-xl">
-      <div class="flex flex-wrap gap-4 rounded-xl bg-white p-4 shadow-sm">
-        <div class="aspect-[3/2] w-full overflow-hidden rounded-lg bg-zinc-200">
+  <div class="mx-auto grid gap-4 md:grid-cols-3 md:gap-14 md:pt-10">
+    <div
+      :for={instance <- @instances}
+      class="bg-slate-200x space-y-0.5 overflow-hidden rounded-2xl"
+    >
+      <div class="relative flex items-start gap-4 rounded-t-2xl border-x border-t p-2">
+        <div class="aspect-[4/5] relative w-16 shrink-0 overflow-hidden rounded-lg">
           <img
-            src={Gits.Bucket.get_feature_image_path(ticket.event.account_id, ticket.event.id)}
+            src={
+              Gits.Bucket.get_listing_image_path(
+                instance.ticket.event.account_id,
+                instance.ticket.event.id
+              )
+            }
             alt="feature image"
-            class="object-cover"
+            class="size-full object-cover"
           />
         </div>
-        <h2 class="text-lg font-semibold"><%= ticket.event.name %></h2>
-        <div class="w-full">
-          <div class="flex w-full justify-between text-xs font-medium text-zinc-500">
-            <span>Name</span>
-            <span>Ticket</span>
-          </div>
-          <div class="flex w-full justify-between text-sm font-medium">
-            <span><%= @current_user.display_name %></span>
-            <span><%= ticket.name %></span>
-          </div>
+        <div class="grid grow gap-2">
+          <span class="font-semibold text-zinc-500"><%= instance.ticket.name %></span>
+          <h2 class="line-clamp-2 font-semibold leading-tight text-zinc-900">
+            <%= instance.ticket.event.name %>
+          </h2>
         </div>
-
-        <div class="w-full">
-          <div class="flex w-full justify-between text-xs font-medium text-zinc-500">
-            <span>Time</span>
-            <span>Date</span>
-          </div>
-          <div class="flex w-full justify-between text-sm font-medium">
-            <span>
-              <%= ticket.event.local_starts_at |> Timex.format!("%H:%M %p", :strftime) %>
-            </span>
-            <span>
-              <%= ticket.event.local_starts_at
-              |> Timex.format!("%A, %e %b %Y", :strftime) %>
-            </span>
-          </div>
+        <div class="flex shrink-0 flex-col gap-2">
+          <.link
+            navigate={~p"/my/tickets/#{instance.qr_code}"}
+            class="flex rounded-lg p-3 hover:bg-black/10"
+          >
+            <.icon name="hero-qr-code" />
+          </.link>
         </div>
-        <div class="w-full">
-          <div class="flex w-full justify-between text-xs font-medium text-zinc-500">
-            <span>Place</span>
-          </div>
-          <div class="flex w-full justify-between text-sm font-medium">
-            <span><%= ticket.event.address.display_name %></span>
-            <span><%= ticket.event.address.city %></span>
-          </div>
+        <div class="size-5 absolute -bottom-3 -left-3 z-10 rounded-full border bg-white"></div>
+        <div class="size-5 absolute -right-3 -bottom-3 z-10 rounded-full border bg-white"></div>
+        <div class="absolute inset-x-0 -bottom-1 h-1 rounded-full border-b-2 border-dashed"></div>
+      </div>
+      <div class="grid rounded-b-2xl border-x border-b p-2">
+        <div class="flex grow items-center gap-2 p-2 text-zinc-500">
+          <.icon name="hero-calendar-days-micro" class="shrink-0" />
+          <span class="text-sm"><%= ticket_dates_from_event(instance.ticket.event) %></span>
+        </div>
+        <div class="flex grow items-center gap-2 truncate p-2 text-zinc-500">
+          <.icon name="hero-map-pin-micro" class="shrink-0" />
+          <%= if is_nil(instance.ticket.event.address) do %>
+            <span class="text-sm">No address</span>
+          <% else %>
+            <span class="truncate text-sm">
+              <%= instance.ticket.event.address.display_name %> &bull; <%= instance.ticket.event.address.city %>
+            </span>
+          <% end %>
         </div>
       </div>
-
-      <div class="flex items-center gap-4 rounded-xl bg-white p-4 shadow-sm">
-        <div class="flex items-center gap-1">
-          <.icon name="hero-users-micro" class="text-zinc-500" />
-          <span class="text-sm"><%= ticket.instances |> Enum.count() %></span>
-        </div>
-
-        <div class="flex items-center gap-2 rounded-xl bg-zinc-100 p-3">
-          <.icon name="hero-share-micro" class="text-zinc-500" />
-          <span class="text-sm"><%= ticket.instances |> Enum.count() %></span>
-        </div>
-
-        <span
-          :if={false}
-          class="ring-green-600/20 inline-flex items-center rounded-full bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset"
-        >
-          Available
-        </span>
-        <div role="none" class="grow"></div>
-        <button
-          class="flex rounded-md p-1 ring-1 ring-zinc-400 hover:bg-zinc-100"
-          phx-click={JS.navigate(~p"/my/tickets/#{ticket.token}")}
-        >
-          <.icon name="hero-qr-code" />
-        </button>
-        <button :if={false} class="flex rounded-md p-1 hover:bg-zinc-100">
-          <.icon name="hero-ellipsis-vertical-mini" />
-        </button>
-      </div>
-    </swiper-slide>
-  </swiper-container>
+    </div>
+  </div>
 </div>
