--- a/lib/gits_web/controllers/user_html/tickets.html.heex
+++ b/lib/gits_web/controllers/user_html/tickets.html.heex
@@ -7,7 +7,7 @@
       </span>
     </span>
   </div>
-  <div class="mx-auto grid gap-4 md:grid-cols-3 md:gap-14 md:pt-10">
+  <div class="mx-auto grid gap-4 p-2 md:grid-cols-3 md:gap-14 md:pt-10">
     <div
       :for={instance <- @instances}
       class="bg-slate-200x space-y-0.5 overflow-hidden rounded-2xl"
