--- a/lib/gits_web/components/layouts/dashboard.html.heex
+++ b/lib/gits_web/components/layouts/dashboard.html.heex
@@ -14,16 +14,25 @@
     id="sidebar"
   >
     <div class="flex h-full flex-col rounded-xl bg-white p-2 shadow-sm lg:bg-transparent lg:shadow-none">
-      <div class="pb-4 lg:hidden">
+      <div class="flex gap-2 pb-4">
         <button
           phx-click={
             JS.remove_class("translate-x-72", to: "#sidebar")
             |> JS.add_class("hidden", to: "#backdrop")
           }
-          class="rounded-xl p-2"
+          class="rounded-xl p-2 lg:hidden"
         >
           <.icon name="hero-x-mark-mini" />
         </button>
+
+        <div class="relative flex shrink-0 grow pt-1 sm:p-0 lg:px-2">
+          <.link navigate="/" class="text-2xl font-black italic text-zinc-800">
+            GiTS
+          </.link>
+          <span class="text-[12px] leading-2 absolute -top-1 left-16 inline-flex items-center rounded-md px-1 font-medium text-yellow-800">
+            Beta
+          </span>
+        </div>
       </div>
       <div
         class="flex items-center rounded-lg p-2 px-4 hover:bg-zinc-50 lg:hover:bg-zinc-100"
