--- a/lib/gits_web/controllers/page_html/faq.html.heex
+++ b/lib/gits_web/controllers/page_html/faq.html.heex
@@ -1,7 +1,7 @@
 <div class="flex grow flex-col justify-center gap-6">
   <div class="bg-white">
-    <div class="mx-auto max-w-7xl py-24 sm:pt-32 lg:py-40">
-      <div class="lg:grid lg:grid-cols-12 lg:gap-8">
+    <div class="mx-auto max-w-7xl p-2 py-24 sm:pt-32 lg:py-40">
+      <div class=" lg:grid lg:grid-cols-12 lg:gap-8">
         <div class="lg:col-span-5">
           <h2 class="text-2xl font-bold leading-10 tracking-tight text-gray-900">
             Frequently asked questions
@@ -16,12 +16,12 @@
         </div>
         <div class="mt-10 lg:col-span-7 lg:mt-0">
           <dl class="space-y-10">
-            <div :for={faq <- @faqs}>
+            <div :for={faq <- @faqs} id={faq.id}>
               <dt class="text-base font-semibold leading-7 text-gray-900">
-                <%= faq.q %>
+                <%= faq.question %>
               </dt>
               <dd class="mt-2 text-base leading-7 text-gray-600">
-                <%= faq.a %>
+                <%= raw(faq.answer) %>
               </dd>
             </div>
           </dl>
