--- a/lib/gits_web/live/dashboard_live/event.html.heex
+++ b/lib/gits_web/live/dashboard_live/event.html.heex
@@ -271,8 +271,8 @@
         <.input field={f[:local_sale_starts_at]} label="Sale starts at" type="datetime-local" />
         <.input field={f[:local_sale_ends_at]} label="Sale ends at" type="datetime-local" />
         <.radio_group label="Availability" field={f[:availability]} class="col-span-full">
-          <:radio value={:open}>Open</:radio>
-          <:radio value={:restricted}>Restricted</:radio>
+          <:radio value={:public}>Public</:radio>
+          <:radio value={:invite_only}>Invite Only</:radio>
         </.radio_group>
       </div>
       <div class="grid grid-cols-2 gap-4 bg-white md:gap-8">
