--- a/lib/gits_web/components/layouts/dashboard.html.heex
+++ b/lib/gits_web/components/layouts/dashboard.html.heex
@@ -1,30 +1,113 @@
-<%= if FunWithFlags.enabled?(:next) do %>
-  <div class="flex min-h-screen flex-col bg-zinc-50 p-2">
-    <div class="flex items-center gap-4 p-2">
+<% navigation = [
+  %{
+    icon: "hero-rectangle-group-micro",
+    label: :Overview,
+    href: ~p"/accounts/#{@slug}",
+    current: @current_route == :Overview
+  },
+  %{
+    icon: "hero-calendar-days-micro",
+    label: :Events,
+    href: ~p"/accounts/#{@slug}/events",
+    current: @current_route == :Events
+  },
+  %{
+    icon: "hero-banknotes-micro",
+    label: :Baskets,
+    href: ~p"/accounts/#{@slug}/baskets",
+    current: @current_route == :Baskets
+  },
+  %{
+    icon: "hero-user-group-micro",
+    label: :Team,
+    href: ~p"/accounts/#{@slug}/team",
+    current: @current_route == :Team
+  },
+  %{
+    icon: "hero-cog-6-tooth-micro",
+    label: :Settings,
+    href: ~p"/accounts/#{@slug}/settings",
+    current: @current_route == :Settings
+  }
+  # %{icon: "hero-rectangle-group-micro", label: :Baskets, href: ~p"/accounts/#{@slug}/baskets"}
+] %>
+<%= if FunWithFlags.enabled?(:beta, for: @current_user) and @current_route != false do %>
+  <.flash_group flash={@flash} />
+  <div class="grid-rows-[auto_1fr] grid h-screen bg-white dark:bg-slate-900 md:bg-zinc-50 md:px-2 md:pb-2">
+    <header class="flex items-center gap-4 p-2">
       <div class="relative flex shrink-0">
-        <.link navigate="/" class="text-2xl font-black italic text-zinc-800">
+        <.link
+          navigate="/"
+          class="text-2xl font-black inline-flex focus-visible:ring-2 dark:text-zinc-50 focus:outline-none focus-visible:ring-zinc-500 rounded-xl italic text-zinc-800"
+        >
           GiTS
         </.link>
       </div>
-      <div class="self-stretch border-l"></div>
-      <div class="hidden grow justify-center gap-6 font-medium md:flex">
-        <div class="flex items-center gap-2 rounded-full border bg-white py-1 pr-4 pl-3 text-sm">
-          <.icon name="hero-rectangle-group-micro" />
-          <span>Overview</span>
-        </div>
-
-        <div class="flex items-center gap-2 rounded-full border py-1 pr-4 pl-3 text-sm text-zinc-500">
-          <.icon name="hero-calendar-days-micro" />
-          <span>Events</span>
-        </div>
-
-        <div class="flex items-center gap-2 rounded-full border py-1 pr-4 pl-3 text-sm text-zinc-500">
-          <.icon name="hero-user-group-micro" />
-          <span>Team</span>
-        </div>
+      <div class="hidden border">Hello</div>
+      <div class="grow justify-center gap-6 font-medium md:flex">
+        <.link
+          :for={nav <- navigation}
+          navigate={nav.href}
+          class={[
+            "md:flex hidden focus-visible:ring-2 focus:outline-none focus-visible:ring-zinc-500 focus-visible:ring-1 items-center gap-2 rounded-2xl py-2 pr-4 pl-3 text-sm",
+            if(nav.current,
+              do:
+                "bg-white ring-1 ring-zinc-200 dark:ring-zinc-600 dark:bg-slate-800 text-zinc-700 dark:text-zinc-200",
+              else: "text-zinc-400"
+            )
+          ]}
+        >
+          <.icon name={nav.icon} />
+          <span><%= nav.label %></span>
+        </.link>
       </div>
-    </div>
-    <div class="grow rounded-2xl bg-white p-2 py-8 shadow-md">content</div>
+      <div class="flex items-center gap-4">
+        <.link
+          navigate={~p"/accounts/#{@slug}/settings"}
+          class="hidden items-center gap-2 rounded-xl focus-visible:ring-2 focus:outline-none focus-visible:ring-zinc-500 focus-visible:ring-1 p-2.5 text-sm text-zinc-500 hover:bg-black/5 md:flex"
+        >
+          <.icon name="hero-cog-6-tooth" />
+        </.link>
+
+        <button class="flex items-center gap-2 rounded-xl bg-zinc-800 p-2.5 text-sm font-medium text-white focus:outline-none focus-visible:ring-2 focus-visible:ring-zinc-500 md:px-4">
+          <.icon name="hero-plus" />
+          <span class="hidden md:inline-flex">
+            Create
+          </span>
+        </button>
+
+        <button
+          class="flex rounded-xl px-3 py-3 text-sm md:hidden"
+          phx-click={JS.show(to: "#sidebar")}
+        >
+          <.icon name="hero-bars-3-mini" />
+        </button>
+      </div>
+    </header>
+    <aside class="bg-zinc-500/50 fixed inset-0 md:hidden" id="sidebar">
+      <.focus_wrap id="sidebar-content">
+        <div class="max-w-72 absolute top-2 right-2 bottom-2 flex w-full flex-col rounded-xl bg-white">
+          <div class="flex justify-end">
+            <button class="flex rounded-xl p-3" phx-click={JS.hide(to: "#sidebar")}>
+              <.icon name="hero-x-mark-mini" />
+            </button>
+          </div>
+          <div class="grid gap-2 p-2">
+            <.link
+              :for={nav <- navigation}
+              navigate={nav.href}
+              class="flex items-center gap-4 first:bg-zinc-50 first:text-zinc-700 rounded-lg p-4 font-medium text-sm  text-zinc-400"
+            >
+              <.icon name={nav.icon} />
+              <span><%= nav.label %></span>
+            </.link>
+          </div>
+        </div>
+      </.focus_wrap>
+    </aside>
+    <main class="overflow-auto bg-white p-2 dark:bg-slate-800 md:rounded-xl md:shadow">
+      <%= @inner_content %>
+    </main>
   </div>
 <% else %>
   <div class="h-dvh bg-zinc-50 lg:grid-cols-[theme(space.64)_1fr] lg:grid lg:grid">
