--- a/lib/gits_web/components/layouts/event.html.heex
+++ b/lib/gits_web/components/layouts/event.html.heex
@@ -1,5 +1,11 @@
 <.header user={@current_user} />
-<div class="min-h-[calc(100dvh-theme(space.40))] mx-auto flex w-full max-w-screen-xl grow flex-col justify-center gap-10 rounded-lg bg-white dark:bg-white">
-  <%= @inner_content %>
-</div>
+<%= if FunWithFlags.enabled?(:beta, for: @current_user) do %>
+  <div class="md:mx-auto md:max-w-screen-lg md:p-2 md:pt-16 ">
+    <%= @inner_content %>
+  </div>
+<% else %>
+  <div class="min-h-[calc(100dvh-theme(space.40))] mx-auto flex w-full max-w-screen-xl grow flex-col justify-center gap-10 rounded-lg bg-white dark:bg-white">
+    <%= @inner_content %>
+  </div>
+<% end %>
 <.footer class="min-h-28 mt-20 bg-zinc-50" />
